structure , some functionality and bootstrap

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,50 @@
-<h1>Welcome 
-    {{people.fname}} {{people.lname}}</h1>
-<p> <strong>Date of Birth : </strong> {{people.dob}} </p><br>
-<p> <strong>Gender : </strong> {{people.gender}} </p><br>
-<p> <strong>Email : </strong> {{people.email}} </p><br>
-<p> <strong>Phone Number : </strong> {{people.phno}} </p><br>
+<div class="main-content">
+    <div class="jumbotron text-center">
+      <h1 class="display-2">Welcome to Easy Loans!</h1>
+      <p>A one stop online platform for loan</p>
+    </div>
+    <div class="loan-type">
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="card">
+            <img src="https://5.imimg.com/data5/WK/SR/TT/SELLER-98307728/housing-loan-500x500.png" class="card-img-top card-img" alt="Housing loan photo">
+            <div class="card-body">
+              <h5 class="card-title">Home loan</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Explore more</a>
+            </div>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="card">
+          <img src="https://5.imimg.com/data5/XN/EL/YI/SELLER-14332490/personal-loans-visakhapatnam-500x500.jpg" class="card-img-top card-img" alt="Housing loan photo">
+          <div class="card-body">
+            <h5 class="card-title">Personal loan</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Explore more</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="card">
+          <img src="https://www.jagranimages.com/images/newimg/18112019/18_11_2019-car_loan_freepik_19768037_125934162.jpg" class="card-img-top card-img" alt="Housing loan photo">
+          <div class="card-body">
+            <h5 class="card-title">Car loan</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Explore more</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div class="card">
+          <img src="http://psbl.co.in/wp-content/uploads/2016/11/education-loan_thumb.png" class="card-img-top card-img" alt="Housing loan photo">
+          <div class="card-body">
+            <h5 class="card-title">Education loan</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Explore more</a>
+          </div>
+        </div>
+        </div>
+    </div>
+   </div>
+  </div>
