--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,30 @@
-<div>
+<section id="navbar">
+  <div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/registration">Register</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/login">Login</a>
-        </li>
-    </ul>
+      <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/registration">Register</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/login">Login</a>
+          </li>
+      </ul>
     </nav>
-</div>
+ </div>
+  <div *ngIf="isAdmin">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/registration">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/approved">Approved</a>
+          </li>
+      </ul>
+    </nav>
+  </div>
+</section>
 <router-outlet></router-outlet>
