--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,34 +5,27 @@
           <div class="card shadow-2-strong" style="border-radius: 1rem;">
             <div class="card-body p-5 text-center">
   
-              <h3 class="mb-5">Login in</h3>
-  
-              <div class="form-outline mb-4">
-                <input type="email" id="typeEmailX-2" [(ngModel)]="people.email" class="form-control form-control-lg" />
-                <label class="form-label" for="typeEmailX-2">Email</label>
-              </div>
-  
-              <div class="form-outline mb-4">
-                <input type="password" id="typePasswordX-2" [(ngModel)]="people.password"  class="form-control form-control-lg" />
-                <label class="form-label" for="typePasswordX-2">Password</label>
-              </div>
-  
-  
-              <button class="btn btn-primary btn-lg btn-block" (click)="onLogin()" type="submit">Login</button>
-              <div *ngIf="success">
-                <p>
-                    <ngb-alert [dismissible]="true">
-                      <strong>Success</strong> You are sucessfully signed in.
-                    </ngb-alert>
-                  </p>
-              </div>
-              <div *ngIf="!success && isHit">
-                <p>
-                    <ngb-alert [dismissible]="true">
-                      <strong>Alert!</strong> Email or password is wrong.
-                    </ngb-alert>
-                  </p>
-              </div>
+              <h3 class="mb-5">Login</h3>
+              <form>
+                <div class="form-outline mb-4">
+                  <input type="email" id="typeEmailX-2" [formControl] = 'email' class="form-control form-control-lg" />
+                  <label class="form-label" for="typeEmailX-2">Email</label>
+                </div>
+    
+                <div class="form-outline mb-4">
+                  <input type="password" id="typePasswordX-2" [formControl] = 'password'  class="form-control form-control-lg" />
+                  <label class="form-label" for="typePasswordX-2">Password</label>
+                </div>
+    
+    
+                <button class="btn btn-primary btn-lg btn-block" (click)="onLogin()" type="submit">Login</button>
+                <div *ngIf="success" class="alert alert-success" >
+                  You are logged in!
+                </div>
+                <div *ngIf="!success && isHit" class="alert alert-danger" >
+                  Email or password is incorrect!
+                </div>
+              </form>
   
             </div>
           </div>
