--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,8 +10,8 @@
             <img src="https://5.imimg.com/data5/WK/SR/TT/SELLER-98307728/housing-loan-500x500.png" class="card-img-top card-img" alt="Housing loan photo">
             <div class="card-body">
               <h5 class="card-title">Home loan</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Explore more</a>
+              <p class="card-text">A home loan is a secured loan taken from a financial institution for the purpose of buying a residential property.</p>
+              <a href="https://www.bankbazaar.com/home-loan.html" class="btn btn-primary">Explore more</a>
             </div>
         </div>
       </div>
@@ -20,8 +20,8 @@
           <img src="https://5.imimg.com/data5/XN/EL/YI/SELLER-14332490/personal-loans-visakhapatnam-500x500.jpg" class="card-img-top card-img" alt="Housing loan photo">
           <div class="card-body">
             <h5 class="card-title">Personal loan</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Explore more</a>
+            <p class="card-text">Personal Loan is an unsecured credit provided by financial institutions based on criteria like employment history, repayment capacity, income.</p>
+            <a href="https://www.icicibank.com/blogs/personal-loan/what-is-personal-loan-everything-about-personal-loan.page" class="btn btn-primary">Explore more</a>
           </div>
         </div>
       </div>
@@ -30,8 +30,8 @@
           <img src="https://www.jagranimages.com/images/newimg/18112019/18_11_2019-car_loan_freepik_19768037_125934162.jpg" class="card-img-top card-img" alt="Housing loan photo">
           <div class="card-body">
             <h5 class="card-title">Car loan</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Explore more</a>
+            <p class="card-text">Car loan is a financial assistance taken to purchase a car with minimal initial payment from your own pocket.</p>
+            <a href="https://www.creditmantri.com/car-finance/#:~:text=Car%20loan%20is%20a%20financial,itself%20that%20is%20being%20bought." class="btn btn-primary">Explore more</a>
           </div>
         </div>
       </div>
@@ -40,8 +40,8 @@
           <img src="http://psbl.co.in/wp-content/uploads/2016/11/education-loan_thumb.png" class="card-img-top card-img" alt="Housing loan photo">
           <div class="card-body">
             <h5 class="card-title">Education loan</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Explore more</a>
+            <p class="card-text">An education loan is a sum of money borrowed to finance post-secondary education or higher education-related expenses.</p>
+            <a href="https://www.investopedia.com/terms/e/education-loan.asp" class="btn btn-primary">Explore more</a>
           </div>
         </div>
         </div>
