--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -12,10 +12,8 @@
             <ul>{{people.phno}}</ul>
             <ul>{{people.gender}}</ul>
             <button class="btn btn-dark"(click)="onEdit()" >Edit info</button>
-            <p>Enter type of loan you want</p>
-            <div class="form-group col-sm-3">
-                <input type="text" class="form-control" id="tol" >
-              </div>
+
+            <p>If all details are correct proceed to the next page</p>
             <button class="btn btn-success" (click)="onSubmit()" >Confirm</button>
     </div>
 </div>
