--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,25 +1,32 @@
+<button class="btn btn-primary logout" (click)="onLogout()" >Logout</button>
 <table class="table" >
     <thead>
         <tr>
-            <th>Loan type</th>
-            <th>Interest Rate</th>
-            <th>Interest Amount</th>
-            <th>Loan term</th>
-            <th>Total Amount</th>
+            <th>Full Name</th>
+            <th>Loan-type | Interest-Rate | Amount | Loan-term | Total Amount</th>
             <th>Accept</th>
             <th>Reject</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let loan of loanInfo ; let index=index;">
-            <td>{{this.loanType}}</td>
-            <td>{{loan.interestRate}}</td>
-            <td>{{loan.loanAmount}}</td>
-            <td>{{loan.loanTerm}}</td>
-            <td>{{loan.totalamount}}</td>
-            <td><button class="btn btn-primary"(click)="onAccept(index)" >Accept</button></td>
-            <td><button class="btn btn-danger"(click)="onReject(index)" >Reject</button></td>
+        <tr *ngFor="let user of users ">
+            <td>{{user.fname+" "+user.lname}}</td>
+            <div *ngFor="let loan of user.loanInfo ; let index = index" >
+                <td>{{loan.loanType}}</td>
+                <td>{{loan.interestRate}}</td>
+                <td>{{loan.loanAmount}}</td>
+                <td>{{loan.loanTerm}}</td>
+                <td>{{loan.totalamount}}</td>
+                <td><button class="btn btn-primary"(click)="onAccept(user.email,index)" >Accept</button></td>
+                <td><button class="btn btn-danger"(click)="onReject()" >Reject</button></td>
+                <div *ngIf="status" >
+                    <div class="form-group col-sm-3">
+                        <label for="feedback">Feedback</label>
+                        <input type="text" class="form-control" id="feedback" [formControl]="feedbackval" >
+                    </div>
+                    <button class="btn btn-primary" (click)="onSubmit(user.email,index)" >Submit</button>
+                </div>
+            </div>
         </tr>
     </tbody>
 </table>
-<app-disapproval *ngIf="!status" ></app-disapproval>
