--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -105,6 +105,9 @@
                 <div class="mt-4 pt-2">
                   <button class="btn btn-primary btn-lg" [disabled]="!forms.valid" type="submit" (click)="onSubmit()" value="Submit">Register</button>
                 </div>
+                <div *ngIf="userExists" class="alert alert-danger">
+                  User already exists! Please login.
+                </div>
   
               </form>
             </div>
