--- a/src/app/components/status-page/status-page.component.html
+++ b/src/app/components/status-page/status-page.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-dark go-back " (click)="navback()" > Go home </button>
+<div><button class="btn btn-dark go-back " (click)="navback()" > Go home </button></div>
 <div *ngFor="let requests of loanInfo" >
     <div class="card" style="width: 18rem;">
         <div class="card-body">
