--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-primary refresh" (click)="onRefresh()" >Refresh</button>
 <button class="btn btn-primary logout" (click)="onLogout()" >Logout</button>
 <table class="table" >
     <thead>
@@ -23,10 +24,10 @@
             <td>{{item.loanTerm}} years</td>
             <td>Rs.{{item.totalamount}}</td>
             <td>{{item.isApproved}}</td>
-            <td ><button [disabled]="item.action || flag" class="btn btn-primary"(click)="onAccept(item.email,index)" >Accept</button></td>
-            <td ><button [disabled]="item.action || flag" class="btn btn-danger"(click)="onReject()" >Reject</button></td>
+            <td ><button [disabled]="item.action" class="btn btn-primary"(click)="onAccept(item.email,index)" >Accept</button></td>
+            <td ><button [disabled]="item.action" class="btn btn-danger"(click)="onReject()" >Reject</button></td>
             <div *ngIf="status && !item.action" >
-                <div class="form-group col-sm-3 feedback">
+                <div class="form-group col-sm-6 feedback">
                     <input type="text" class="form-control" id="feedback" [formControl]="feedbackval" >
                     <button class="btn btn-primary" (click)="onSubmit(item.email,index)" >Submit</button>
                 </div>
